--- a/BT3/composer.json
+++ b/BT3/composer.json
@@ -1,8 +1,9 @@
 {
-    "require": {
-        "twig/twig": "^3.5",
-        "nikic/fast-route": "^1.3",
-        "symfony/routing": "^6.2",
-        "symfony/http-foundation": "^6.2"
-    }
+  "require": {
+    "twig/twig": "^3.5",
+    "nikic/fast-route": "^1.3",
+    "symfony/routing": "^6.2",
+    "symfony/http-foundation": "^6.2",
+    "symfony/http-kernel": "^6.2"
+  }
 }
