--- a/BT3/composer.json
+++ b/BT3/composer.json
@@ -4,6 +4,8 @@
     "nikic/fast-route": "^1.3",
     "symfony/routing": "^6.2",
     "symfony/http-foundation": "^6.2",
-    "symfony/http-kernel": "^6.2"
+    "symfony/http-kernel": "^6.2",
+    "symfony/framework-bundle": "^6.2",
+    "symfony/dependency-injection": "^6.2"
   }
 }
